Fix images width on small screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -123,6 +123,8 @@ ul#categories, ul#recipes {
 /* RECIPE PAGE */
 #recipe img {
 	float: right;
+	max-width: 100%;
+	height: auto;
 }
 
 #recipe ul {
